--- a/pizzeria/package.json
+++ b/pizzeria/package.json
@@ -27,6 +27,7 @@
     "@ionic/angular": "^4.7.1",
     "call-number": "^1.0.1",
     "core-js": "^2.5.4",
+    "mongoose": "^5.7.13",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
