--- a/pizzeria/package.json
+++ b/pizzeria/package.json
@@ -27,6 +27,7 @@
     "@ionic/angular": "^4.7.1",
     "call-number": "^1.0.1",
     "core-js": "^2.5.4",
+    "express": "^4.17.1",
     "mongoose": "^5.7.13",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -42,7 +43,7 @@
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "~2.0.0",
-    "@ionic/lab": "2.0.13",
+    "@ionic/lab": "^2.0.13",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
