--- a/pizzeria/package.json
+++ b/pizzeria/package.json
@@ -21,13 +21,14 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/call-number": "^4.20.0",
-    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/core": "^5.18.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "call-number": "^1.0.1",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
+    "mongodb": "^3.4.0",
     "mongoose": "^5.7.13",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
